--- a/src/features/todos/todo-list/todo-list.module.css
+++ b/src/features/todos/todo-list/todo-list.module.css
@@ -40,7 +40,6 @@
 @media bp-mobile-screen {
   .statusbar {
     min-height: 3.2rem;
-    font-size: 0.8rem;
   }
 }
 .count {
@@ -62,7 +61,7 @@
   .filter {
     border-radius: 5px;
     margin-top: 1.3rem;
-    font-size: 0.95rem;
+    font-size: 0.85rem;
   }
 }
 
